# DaKanji-Single-Kanji-Recognition

./: .gitignore  CHANGELOG.md  README.md  TECHNICAL.md  pyproject.toml  single_kanji_onnx_export.ipynb
configs/augment/: default.toml  none.toml
configs/data/: kanji.toml  kanji_128.toml  synthetic.toml
configs/log/: default.toml  grid.toml  synthetic.toml
configs/model/: efficientnet_lite_b0.toml  mobilenetv3_small.toml
configs/optim/: default.toml  grid.toml  quick.toml
configs/runs/: grid.toml  kanji.toml  kanji_128_mobilenetv3_small.toml  kanji_efficientnet_lite_b0.toml  kanji_mobilenetv3.toml  synthetic.toml  synthetic_efficientnet_lite_b0.toml
notebooks/: train.py
scripts/: architecture_search.py  evaluate.py  export.py  export_coreml.py  grid_search.py  head_rank_search.py  prepare_release_assets.py  quantize.py  train.py
src/char_recognition/: __init__.py  paths.py
src/char_recognition/config/: __init__.py  augment.py  data.py  loader.py  log.py  model.py  optim.py
src/char_recognition/data/: __init__.py  augment.py  augmented_dataset.py  datamodule.py  dataset.py  dataset_utils.py  labels.py  synthetic.py
src/char_recognition/engine/: __init__.py  checkpoint.py  logger.py  optim.py  runner.py  trainer.py
src/char_recognition/export/: __init__.py  executorch.py  gpu.py  loading.py  onnx.py  xnnpack.py
src/char_recognition/models/: __init__.py  preprocessing.py  recognizer.py  registry.py  small_cnn.py  timm_backbones.py  tiny_cnn.py  torchvision_backbones.py
src/char_recognition/optimize/: __init__.py  benchmark.py  pt2e.py
tests/: test_backend_support.py  test_config.py  test_data.py  test_engine.py  test_executorch.py  test_loading.py  test_models.py  test_onnx.py
